fixed some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "IranYekan";
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 h1,
